# cyclops

./: .dockerignore  .gitignore  .gitmodules  .prettierrc  .prettierrc.json  .syncexclude  LICENSE  cyclops.code-workspace  cyclops.go  developer-guide.md  go.mod  go.sum  internal-notes.md  leftoff  readme.md  server.go
android/: build.gradle  settings.gradle
android/app/: CMakeLists.txt  build.gradle  google-services.json
android/app/src/androidTest/java/org/cyclops/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: index.html
android/app/src/main/assets/site/: index.50e097dc.css  index.64a5a769.js
android/app/src/main/cpp/: native-lib.cpp
android/app/src/main/java/org/cyclops/: Accounts.java  App.java  BaseWebViewClient.java  Connector.java  Constants.java  Crypto.java  FCMReceiverService.java  HttpClient.java  JSAPI.java  LocalContentWebViewClient.java  LocalDB.java  Main.java  MainActivity.java  NativeBridge.java  RemoteWebViewClient.java  Scanner.java  State.java  VideoDecoder.java  WebViewCookieJar.java  WebsocketPlayer.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/org/cyclops/: ExampleUnitTest.java
appui/: README.md  index.html  package-lock.json  package.json  readme.md  vue-readme.md
arc/: Dockerfile  readme.md
debian/: .gitignore  Dockerfile  build  changelog  control  cyclops.dirs  cyclops.install  cyclops.install.arm64  cyclops.service  cyclops.sysusers  fullbuild  postbuild  prebuild  readme.md  rules
debug/: .gitignore  build_encode  encode.cpp
deployment/: build-and-deploy-proxy  (+2 more)
rtsp/: .gitignore  CMakeLists.txt  hello.cpp  testRTSPClient.cpp
(+696 files in other folders)
